SERVER-5484 Aggregation should filter out docs not belonging to current shard